Fix horizontal flickering of samples

--- a/src/app/views/finance/finance-view.component.scss
+++ b/src/app/views/finance/finance-view.component.scss
@@ -2,4 +2,11 @@
   display: block;
   height: 100%;
   width: 100%;
+
+  // Needed because of routing animations keeping both views in DOM even after OnDestroy (https://github.com/angular/angular/issues/19742)
+  // This is a fix for a bug with horizontal flickering due display: flex of the container positions each view next to each other
+  // causing their height or width be incorrect (https://github.com/IgniteUI/grid-demos/issues/60)
+  position: absolute;
+  top: 0;
+  left: 0;
 }
